# ai-resume-builder

./: .gitignore  .replit  DEPLOYMENT_FIX_GUIDE.md  Dockerfile  cv_builder_local.db  deploy_fusion.py  main.py  pyproject.toml  render.yaml  replit.nix  requirements.txt
backend/: Startup_fix.py  cv_builder.db  requirements.txt  restore_admin.py
backend/app/: database.py  main.py  main_api.py
backend/app/core/: config.py  security.py  seed_data.py
backend/app/crud/: __init__.py  cv.py  default_templates.py  init_db.py  template.py  user.py
backend/app/models/: __init__.py  cv.py  package.py  template.py  user.py
backend/app/schemas/: ai.py  cv.py  template.py  user.py
backend/app/services/: ai_service.py  file_service.py  parser_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: AdminPage.css  AdminPage.jsx  CVForm.jsx  CVPreview.css  CVPreview.jsx  ChatGeneratorPage.css  ChatGeneratorPage.jsx  DashboardPage.css  DashboardPage.jsx  EditorLayout.css  EditorLayout.jsx  GeneratorPage.jsx  InteractiveCVGenerator.jsx  LoginPage.jsx  PricingModal.css  PricingModal.jsx  ProtectedRoute.jsx  RegisterPage.jsx  TemplatePreview.jsx  TemplateSelector.css  TemplateSelector.jsx  TemplateStore.css  TemplateStore.jsx  ThemeToolbar.jsx
frontend/src/context/: useAuth.jsx
frontend/src/services/: api.js
